--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "frost-link",
-  "version": "3.0.0",
+  "name": "ember-frost-link",
+  "version": "0.0.1",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
-    "start": "ember server",
     "lint": "eslint *.js addon app config tests",
-    "test": "npm run lint && ember test"
+    "start": "ember server",
+    "build": "ember build",
+    "test": "npm run-script lint && ember test"
   },
-  "repository": "https://stash.ciena.com/scm/nms_frost/frost-link.git",
+  "repository": "git@github.com:ciena-frost/ember-frost-link.git",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 5.0.0"
   },
   "author": "",
+  "author": "Quincy Le (https://github.com/glacierbreaker)",
+  "contributors": [
+    "Steven Glanzer (https://github.com/sglanzer)", 
+    "Gosia Hyndman (https://github.com/vesper2000)",
+    "Matthew Dahl (https://github.com/sandersky)"
+  ],
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
@@ -42,13 +48,12 @@
     "ember-try": "^0.1.3",
     "eslint": "^2.1.0",
     "eslint-config-frost-standard": "^1.0.0",
-    "frost-docs": "^1.1.2",
-    "frost-tabs": "^3.0.0",
     "liquid-fire": "^0.23.0",
     "loader.js": "^4.0.1"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "frost"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.5",
@@ -59,8 +64,5 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  },
-  "publishConfig": {
-    "registry": "https://artifactory.ciena.com/api/npm/icebreaker-npm"
   }
 }
