--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "Faker": "^3.0.1",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
-    "pretender": "^0.10.1"
+    "pretender": "^0.10.1",
+    "marked": "^0.3.5",
+    "highlightjs": "^9.2.0"
   },
   "resolutions": {
     "ember": "2.3.1"
