--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.5",
     "ember-frost-css-core": "^1.1.2",
+    "ember-frost-button": "^2.0.0",
     "ember-frost-icons": "^1.4.0",
     "ember-frost-theme": "^1.2.0",
     "ember-load-initializers": "^0.5.1",
